--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,8 +11,8 @@
       <center style="text-align: right;">
         <a href="https://itunes.apple.com/us/app/coinbase-buy-bitcoin-more/id886427730?mt=8"
           style="display: inline-block; margin-right: 0px !important;">
-          <img class="float-right" src="{{root}}/assets/img/coinbase/iOSApp.png"
-            alt="Coinbase iOS mobile bitcoin wallet" style="height: 40px; padding-bottom: 20px !important;">
+          <img class="float-right" src="https://i.imgur.com/JlrI2E0.png" alt="Coinbase iOS mobile bitcoin wallet"
+            style="height: 40px; padding-bottom: 20px !important;">
         </a>
       </center>
     </columns>
@@ -20,8 +20,8 @@
       <center style="text-align: left;">
         <a href="https://play.google.com/store/apps/details?id=com.coinbase.android&referrer=utm_source%3Dko_bbcb5a2d590b217cb%26utm_medium%3D1%26utm_campaign%3Dkocoinbase----production553ec3be25c1308daf2a5d2791%26utm_term%3D%26utm_content%3D%26"
           style="margin-right: 0px !important; display: inline-block;">
-          <img class="float-left" src="{{root}}/assets/img/coinbase/Android_app.png"
-            alt="Coinbase Android mobile bitcoin wallet" style="height: 40px; padding-bottom: 20px !important;">
+          <img class="float-left" src="https://i.imgur.com/Gv8qjmL.png" alt="Coinbase Android mobile bitcoin wallet"
+            style="height: 40px; padding-bottom: 20px !important;">
         </a>
       </center>
     </columns>
