--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <columns small="4" large="4"
       style=" align-items: center !important; padding-top: 20px !important; padding-bottom: 20px !important;">
       <a href="#" valign="middle">
-        <img src="{{root}}/assets/img/coinbase/coinbase_logo.png" alt="coinbase"
+        <img src="https://i.imgur.com/BrwSk1v.png" alt="coinbase"
           style="width: 100px !important; margin: 0 auto !important;">
       </a>
     </columns>
