fixed footer merging with body styles

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -1,6 +1,10 @@
 html,
-body,
-center {
+body {
+  background: #f4f7fa;
+  background-color: #f4f7fa;
+}
+
+.center {
   background: #f4f7fa;
   background-color: #f4f7fa;
 }
@@ -23,8 +27,4 @@ center {
     margin-left: auto;
     margin-right: auto;
   }
-}
-
-.footer {
-  background-color: #f4f7fa;
 }
