--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<container class="footer">
+<container class="footer" style="background-color: #f4f7fa; background: #f4f7fa;">
   <row>
     <columns>
       <p style="font-size: 14px; font-weight: 400; padding-top: 40px; color: #7d8a97;" class="text-center">Get the
